syntax = "proto3";

package monitor.xmonitor.emitcache;

import "cosmos/orm/v1/orm.proto";

option go_package = "monitor/xmonitor/emitcache";

// EmitCursor stores historical emit cursors for all evm portals.
message EmitCursor {
  option (cosmos.orm.v1.table) = {
    id: 1;
    primary_key: { fields: "id", auto_increment: true }
    index: {id: 2, fields: "src_chain_id,dst_chain_id,shard_id,height", unique: true} // Allow querying and searching.
    index: {id: 3, fields: "height"} // Allow trimming by height.
  };

  uint64 id             = 1; // Auto-incremented ID
  uint64 src_chain_id   = 2; // Source chain ID as per https://chainlist.org
  uint64 height         = 3; // Block Height
  uint64 dst_chain_id   = 4; // Destination Chain ID as per https://chainlist.org
  uint64 shard_id       = 5; // Shard ID
  uint64 msg_offset     = 6; // XMsg Stream Offset
}
